Enabling Async for parallel threading and building proper image URLs for listings